Attachment endpoint and connection to minio tested working
