# components/db-manager/pkg/api/docs/swagger.yaml
@@ -6,9 +6,6 @@ definitions:
         type: string
       name:
         type: string
-      url:
-        description: Url
-        type: string
     type: object
   models.APIKnownLocations:
     properties:
@@ -41,6 +38,8 @@ definitions:
     type: object
   models.Attachments:
     properties:
+      contentType:
+        type: string
       createdAt:
         description: Automatically generated
         type: string
@@ -149,15 +148,29 @@ paths:
       - attachment
     post:
       consumes:
-      - application/json
+      - multipart/form-data
       description: Create a new attachment
       parameters:
-      - description: Attachment data
-        in: body
-        name: attachment
+      - description: Image/audio file
+        in: formData
+        name: data
         required: true
-        schema:
-          $ref: '#/definitions/models.APIAttachments'
+        type: file
+      - description: name of the attachment
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: description of the attachment
+        in: formData
+        name: description
+        required: true
+        type: string
+      - description: image/jpeg or media/mpeg
+        in: formData
+        name: contentType
+        required: true
+        type: string
       produces:
       - application/json
       responses:
